--- a/to-do-list-2/src/components/Main/WeatherList/WeatherCard/WeatherCard.css
+++ b/to-do-list-2/src/components/Main/WeatherList/WeatherCard/WeatherCard.css
@@ -1,6 +1,18 @@
 .card-item{ 
-    background-color: #A1CDF4;
+    display:flex;
+    background-color: #f8f8f8;
     border-style: solid;
-    width: 250px;
-    margin: 20px
+    padding: 20px;
+    margin: 20px;
+    border-radius: 20px
+}
+
+.data{
+    padding: 10px;
+    border-style: solid;
+    border-width: 1px;
+}
+
+#img{
+    width: 30px
 }
